aligned and fixed about image

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ html, body {
   height: 55px;
 } 
 
-#homeSection img {
+.bg img {
   width: 100%; 
 }
 
@@ -55,6 +55,12 @@ a.nav-link.scroll {
   height: 800px;
 }
 
+.aboutBg img {
+  width: 100%;
+  margin-top: -523px;
+  height: 787px;;
+}
+
 .karmaIsNow {
   font-family: 'Rubik', sans-serif;
   position: relative;
@@ -64,6 +70,7 @@ a.nav-link.scroll {
 }
 
 #circleOne, #circleTwo, #circleThree {
+  position: relative;
   width: 300px;
   height: 300px;
   background: white;
